[Testcontainers] Misc. updates (multi-line strings etc.)