@@ -10,9 +10,7 @@
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <version.debezium>1.1.0.Beta2</version.debezium>
+    <version.debezium>1.1.0.CR1</version.debezium>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -87,6 +85,20 @@
   </dependencies>
   <build>
     <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <executions>
+        <execution>
+          <id>default-testCompile</id>
+          <configuration>
+            <release>14</release>
+            <compilerArgs>--enable-preview</compilerArgs>
+          </configuration>
+        </execution>
+      </executions>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -95,6 +107,7 @@
           <systemPropertyVariables>
             <debeziumVersion>${version.debezium}</debeziumVersion>
           </systemPropertyVariables>
+          <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
     </plugins>
